force-app/main/default/email_log_auditor/objects/EmailMessage/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Computed bucket assigned by EmailCategorizationService based on EmailCategoryRule__mdt rules (Subject / FromAddress / ParentType matching).</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CaseMessage</fullName>
                <label>Case Message</label>
            </value>
            <value>
                <fullName>PasswordReset</fullName>
                <label>Password Reset</label>
            </value>
            <value>
                <fullName>FlowError</fullName>
                <label>Flow Error</label>
            </value>
            <value>
                <fullName>ApexException</fullName>
                <label>Apex Exception</label>
            </value>
            <value>
                <fullName>SystemOther</fullName>
                <label>System / Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>