force-app/main/default/email_log_auditor/objects/EmailMessage/fields/DeliveryData__c.field-meta.xml
<CustomField>
    <fullName>DeliveryData__c</fullName>
    <description>JSON array of per-recipient delivery events. Each entry: {recipient, status, timestamp, failureReason, failureCode}. Single source of truth for per-recipient delivery state. Default '[]' set by SetDeliveryStatusDefault TAF action on insert.</description>
    <label>Delivery Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>