force-app/main/default/email_log_auditor/objects/EmailMessage/fields/MessageId__c.field-meta.xml
<CustomField>
    <fullName>MessageId__c</fullName>
    <description>RFC Message-Id header value extracted by the SetDeliveryStatusDefault TAF action. Used as the primary key for matching CSV log rows to EmailMessage records.</description>
    <externalId>true</externalId>
    <label>Message Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>